tests/invalid/invalid-annotation-syntax.orgs
@owner sales_ops
process InvalidAnnotationSyntax

  when lead.created
